--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
                         <form class="row g-3 needs-validation" novalidate>
                             <div class="col-md-4">
                               <label for="validationCustom01" class="form-label">First name</label>
-                              <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                              <input type="text" class="form-control" id="validationCustom01" required>
                               <div class="valid-feedback">
                                 Looks good!
                               </div>
                             </div>
                             <div class="col-md-4">
                               <label for="validationCustom02" class="form-label">Last name</label>
-                              <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+                              <input type="text" class="form-control" id="validationCustom02" required>
                               <div class="valid-feedback">
                                 Looks good!
                               </div>
@@ -124,9 +124,14 @@
                 </div>
             </div>
             <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#logInModal">Log in</button>
+
+            <!--cart button-->
             <button class="btn btn-primary" type="button" id="cartBtn" data-bs-toggle="offcanvas"
             data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
                 class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></button>
+            <!--cart button-->
+
+            <!--Log in button modal-->
             <div class="modal fade" id="logInModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
