--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form class="row g-3 needs-validation" novalidate>
+                        <form class="row g-3 needs-validation" validate>
                             <div class="col-md-4">
                               <label for="validationCustom01" class="form-label">First name</label>
                               <input type="text" class="form-control" id="validationCustom01" required>
@@ -139,7 +139,7 @@
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Log In</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
-                      <form class="row g-3 needs-validation" novalidate>
+                      <form class="row g-3 needs-validation" validate>
                         <div class="col-md-4">
                           <label for="email" class="form-label">Email:</label>
                           <input type="text" class="form-control" id="email" required>
